# wled-control-panel

./: .gitignore  CMakeLists.txt  filelist.txt
main/: CMakeLists.txt  idf_component.yml  main.c  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
main/components/: ui_comp.c  ui_comp.h  ui_comp_container4.c  ui_comp_container4.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_maincontainer.c  ui_comp_maincontainer.h  ui_comp_panelheader.c  ui_comp_panelheader.h
main/images/: ui_img_icn_time_1_png.c  ui_img_icn_time_2_png.c  ui_img_icn_wifi_png.c
main/screens/: ui_Screen_1_Print.c
